# cmd/swag/docs/swagger.yaml
@@ -295,6 +295,120 @@ paths:
       summary: Like comment
       tags:
       - Like_Comment
+  /notifications:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: Filter notifications by sender
+        in: query
+        name: from
+        type: string
+      - description: Filter notifications by type
+        in: query
+        name: notification_type
+        type: string
+      - description: Filter notifications created at this date
+        in: query
+        name: created_at
+        type: string
+      - description: Sort notifications by this field
+        in: query
+        name: sort_by
+        type: string
+      - description: Sort notifications in descending order
+        in: query
+        name: isDescending
+        type: boolean
+      - description: Limit the number of notifications returned
+        in: query
+        name: limit
+        type: integer
+      - description: 'Pagination: page number'
+        in: query
+        name: page
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get notifications
+      tags:
+      - Notification
+  /notifications/:
+    patch:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Update all notification status to false
+      tags:
+      - Notification
+  /notifications/{notification_id}:
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: Notification ID
+        in: path
+        name: notification_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.ResponseData'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Update notification status to false
+      tags:
+      - Notification
+  /notifications/ws/{user_id}:
+    get:
+      consumes:
+      - application/json
+      description: Establish a WebSocket connection for real-time notifications
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: WebSocket connection established
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrResponse'
+      summary: Connect to WebSocket
+      tags:
+      - Notification
   /posts/:
     get:
       consumes:
